force-app/main/default/objects/leaseworks__Effective_Date__c/leaseworks__Effective_Date__c.object-meta.xml
<CustomObject>
    <label>Effective Date</label>
    <nameField>
        <label>Effective Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Effective Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>