force-app/main/default/objects/leaseworks__Effective_Date__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Effective Dates</relationshipLabel>
    <relationshipName>EffectiveDates_Lease</relationshipName>
    <type>Lookup</type>
</CustomField>