force-app/main/default/objects/leaseworks__Effective_Date__c/fields/leaseworks__Field__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>