force-app/main/default/objects/leaseworks__Effective_Date__c/fields/leaseworks__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Field_Type__c</fullName>
    <description>This field stores the field type of the field being updated</description>
    <label>_Field Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>