force-app/main/default/objects/leaseworks__Effective_Date__c/fields/leaseworks__Previous_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Effective_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the previous value of the field</description>
    <label>Previous Effective Date</label>
    <referenceTo>leaseworks__Effective_Date__c</referenceTo>
    <relationshipLabel>Effective Dates (Previous Effective Date)</relationshipLabel>
    <relationshipName>Effective_Dates1</relationshipName>
    <type>Lookup</type>
</CustomField>