force-app/main/default/objects/leaseworks__Effective_Date__c/fields/leaseworks__Y_Hidden_New_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_New_Value__c</fullName>
    <label>_New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>