force-app/main/default/objects/leaseworks__Effective_Date__c/validationRules/leaseworks__End_Date_Cannot_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__End_Date_Cannot_Before_Start_Date</fullName>
    <active>true</active>
    <description>End Date cannot be before start date.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, leaseworks__Start_Date__c &gt;  leaseworks__End_Date__c )</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before start date. Please Correct it.</errorMessage>
</ValidationRule>