force-app/main/default/objects/leaseworks__Effective_Date__c/validationRules/leaseworks__End_Date_Not_Allowed_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__End_Date_Not_Allowed_Future_Date</fullName>
    <active>true</active>
    <description>End Date cannot be a future date.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,  leaseworks__End_Date__c  &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be a future date. Please correct it.</errorMessage>
</ValidationRule>