force-app/main/default/objects/leaseworks__Effective_Date__c/validationRules/leaseworks__start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__start_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, leaseworks__Start_Date__c  &gt;  TODAY())</errorConditionFormula>
    <errorDisplayField>leaseworks__Start_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot be a future date. Please correct it.</errorMessage>
</ValidationRule>