force-app/main/default/objects/leaseworks__Effective_Date__c/listViews/leaseworks__Effective.listView-meta.xml
<ListView>
    <fullName>leaseworks__Effective</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Field__c</columns>
    <columns>leaseworks__Start_Date__c</columns>
    <columns>leaseworks__End_Date__c</columns>
    <columns>leaseworks__Previous_Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Effective</label>
</ListView>